--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ export(mod_init_sqlite_server)
 export(mod_init_sqlite_ui)
 export(mod_participants_panel_server)
 export(mod_participants_panel_ui)
+export(remaining_calls)
 export(run_app)
 import(shiny)
+importFrom(config,get)
 importFrom(golem,with_golem_options)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
