--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,9 @@ export(mod_participants_panel_ui)
 export(remaining_calls)
 export(run_app)
 import(shiny)
-importFrom(config,get)
+importFrom(dplyr,"%>%")
 importFrom(golem,with_golem_options)
+importFrom(rlang,.data)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
